--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "license": "MIT",
   "types": "./Array.d.ts",
   "description": "Get the last element in an array",
+  "scripts": {
+    "build": "tsc"
+  },
   "devDependencies": {
     "@types/jest": "29.5.12",
     "typescript": "^5.4.5"
