--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # Created by https://www.toptal.com/developers/gitignore/api/node
 # Edit at https://www.toptal.com/developers/gitignore?templates=node
 
-/build
+/build/*
+!/build/src/
+/build/src/*
+!/build/src/Array.d.ts
 
 ### Node ###
 # Logs
