--- a/deno.json
+++ b/deno.json
@@ -1,4 +1,9 @@
 {
+  "name": "@cordor/array-last",
+  "version": "1.0.0",
+  "exports": {
+    ".": "./main.ts"
+  },
   "tasks": {
     "dev": "deno run --watch main.ts"
   },
