--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,7 @@
 {
   "name": "@cordor/array-last",
-  "version": "1.0.0",
-  "exports": {
-    ".": "./main.ts"
-  },
+  "version": "0.1.0",
+  "exports": "./mod.ts",
   "tasks": {
     "dev": "deno run --watch main.ts"
   },
