--- a/deno.json
+++ b/deno.json
@@ -2,6 +2,7 @@
   "name": "@cordor/array-last",
   "version": "0.1.0",
   "exports": "./mod.ts",
+  "license": "MIT",
   "tasks": {
     "dev": "deno run --watch main.ts"
   },
