added global exports

--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,10 @@
 {
   "name": "@cordor/array-last",
   "version": "0.1.0",
-  "exports": "./mod.ts",
+  "exports": {
+    ".": "./mod.ts",
+    "./global": "./global.ts"
+  },
   "license": "MIT",
   "exclude": [".github", "renovate.json"],
   "tasks": {
